# diamondback

./: Cargo.toml  README.md  rust-analyzer.cfg
diamondback/: Implementation Ideas.md  Refactor.md  V2 MSCWW.md
diamondback/.obsidian/: workspace.json
src/common/: beaconentry.rs  command_types.rs  commandutils.rs  contract.rs  guid_handler.rs  guidhandler.rs  mod.rs  netutils.rs  networkinterface.rs  parser.rs  protocol.rs  queue.rs
src/common/armory/scripts/: debugscript.sh
src/common_old/: OHGOD.txt  mod.rs  parser.rs  protocol.rs
