[package]
name = "diamondback"
version = "0.1.0"
edition = "2021"
crate-type = ["bin"]

[[bin]]
name = "dropper"
path = "src/bin/dropper/dropper.rs"
edition = "2021"
target = "x86_64-unknown-linux-musl"

[[bin]]
name = "agent"
path = "src/bin/agent/agent.rs"
edition = "2021"



[[bin]]
name = "manager"
path = "src/bin/manager/manager.rs"
edition = "2021"


[[bin]]
name = "control"
path = "src/bin/control/control.rs"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
once_cell = "1.4.0"
tui = "0.19"
crossterm = "0.25"
libc = "0.2"
nix = { version = "0.26.2", features = ["ptrace", "process"] }



[profile.release]
opt-level = "z"
lto = true
codegen-units =1
panic = "abort"
